--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
           <h3>Trash-Free Brooklyn</h3>
           <a href="https://github.com/renisalcedo/trash-free"><img class="img-responsive"src="assets/img/pages/tfbrooklyn.png" alt="Trash-Free Brooklyn" /></a>
         </div>
+        <!-- Introduction To Python -->
+        <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
+          <h3>Introduction To Python</h3>
+          <a href="https://renisalcedo.github.io/python_tut/"><img class="img-responsive"src="assets/img/pages/python-tut.png" alt="Python tutorial" /></a>
+        </div>
       </div>
     </section>
     <footer>
