Optimized all images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="mast-head col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <div class="container">
       <div class="sub-head">
-        <a href="index.html"><img class="logo" src="assets/img/Logo.png" alt="Logo Image" /></a>
+        <a href="index.html"><img class="logo" src="assets/img/Logo-min.png" alt="Logo Image" /></a>
         <h1>My name is Reynaldo Salcedo</h1>
         <h2 class="i-am" id="iAm">I am A <span class="attr" id="attr">Developer</span></h2>
       </div>
@@ -25,7 +25,7 @@
           <div class="container">
             <li class="col-lg-2 col-md-2"><a href="index.html">Home</a></li>
             <li class="col-lg-2 col-md-2"><a href="#skills-section">Skills</a></li>
-            <li class="col-lg-2 col-md-2"><a href="index.html"><img class="logo unactive-logo img-responsive" id="nav-logo" src="assets/img/Logo.png" alt="Logo image" /></a></li>
+            <li class="col-lg-2 col-md-2"><a href="index.html"><img class="logo unactive-logo img-responsive" id="nav-logo" src="assets/img/Logo-min.png" alt="Logo image" /></a></li>
             <li class="col-lg-3 col-md-3"><a href="#portfolio-section">Portfolio</a></li>
             <li class="col-lg-1 col-md-1" id="portfolio"><a href="#">Email</a></li>
           </div>
@@ -59,30 +59,30 @@
         <!-- HTML/CSS -->
         <div class="box">
           <h3>HTML/CSS</h3>
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" title="Beginner" alt="Beginner" />
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" title="Intermediate"alt="Intermediate" />
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" title="Expert" alt="Expert" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt-min.png" title="Beginner" alt="Beginner" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt-min.png" title="Intermediate"alt="Intermediate" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt-min.png" title="Expert" alt="Expert" />
         </div>
         <!-- Javascript/JQ -->
         <div class="box">
           <h3>JAVASCRIPT/JQUERY</h3>
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" title="Beginner" alt="Beginner" />
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" title="Intermediate" alt="Intermediate" />
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" title="Expert" alt="Expert" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt-min.png" title="Beginner" alt="Beginner" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt-min.png" title="Intermediate" alt="Intermediate" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt-min.png" title="Expert" alt="Expert" />
         </div>
         <!-- RUBY ON RAILS -->
         <div class="box">
           <h3>RUBY ON RAILS</h3>
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" title="Beginner" alt="Beginner" />
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" title="Intermediate" alt="intermediate" />
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" title="Expert" alt="Expert" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt-min.png" title="Beginner" alt="Beginner" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt-min.png" title="Intermediate" alt="intermediate" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt-min.png" title="Expert" alt="Expert" />
         </div>
         <!-- NODEJS -->
         <div class="box">
           <h3>NODEJS</h3>
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt.png" title="Beginner" alt="Beginner" />
-          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt.png" title="Intermediate" alt="Intermediate" />
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt.png" title="Expert" alt="Expert" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt-min.png" title="Beginner" alt="Beginner" />
+          <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt-min.png" title="Intermediate" alt="Intermediate" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt-min.png" title="Expert" alt="Expert" />
         </div>
       </div>
     </section>
