--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Reynaldo Salcedo | Full Stack Developer</title>
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/vendor/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css" />
   </head>
   <body>
@@ -129,7 +129,7 @@
       </div>
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="assets/vendor/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="assets/vendor/scroll.js"></script>
     <script type="text/javascript" charset="utf-8" src="assets/vendor/jquery.waypoints.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="assets/js/action.js"></script>
