--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
       </div>
       <button class="btn btn-side" id="contact">Contact</button>
       <nav class="main-nav">
-        <ul>
-          <div class="container">
+        <ul class="container">
             <li class="col-lg-2 col-md-2"><a href="index.html">Home</a></li>
             <li class="col-lg-2 col-md-2"><a href="#skills-section">Skills</a></li>
             <li class="col-lg-2 col-md-2"><a href="index.html"><img class="logo unactive-logo img-responsive" id="nav-logo" src="assets/img/Logo-min.png" alt="Logo image" /></a></li>
             <li class="col-lg-3 col-md-3"><a href="#portfolio-section">Portfolio</a></li>
             <li class="col-lg-1 col-md-1" id="portfolio"><a href="#">Email</a></li>
-          </div>
         </ul>
       </nav>
     </div>
@@ -60,7 +58,7 @@
         <div class="box">
           <h3>HTML/CSS</h3>
           <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-white-belt-min.png" title="Beginner" alt="Beginner" />
-          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt-min.png" title="Intermediate"alt="Intermediate" />
+          <img class="img-responsive ski-ninja col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-blue-belt-min.png" title="Intermediate" alt="Intermediate" />
           <img class="img-responsive col-xs-4 col-sm-4 col-md-4 col-lg-4" src="assets/img/ninja-black-belt-min.png" title="Expert" alt="Expert" />
         </div>
         <!-- Javascript/JQ -->
@@ -93,27 +91,27 @@
         <!-- TweetStream -->
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box" id="tweet-box">
           <h3>TweetStream</h3>
-          <a href="https://github.com/renisalcedo/text2song"><img class="img-responsive"src="assets/img/pages/text2song-min.png" alt="Text2Song" /></a>
+          <a href="https://github.com/renisalcedo/text2song"><img class="img-responsive" src="assets/img/pages/text2song-min.png" alt="Text2Song" /></a>
         </div>
         <!-- Omnifood -->
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
           <h3>Omnifood</h3>
-          <a href="https://bitbucket.org/renisalcedo/omnifood"><img class="img-responsive"src="assets/img/pages/omnifood-min.png" alt="Omnifood" /></a>
+          <a href="https://bitbucket.org/renisalcedo/omnifood"><img class="img-responsive" src="assets/img/pages/omnifood-min.png" alt="Omnifood" /></a>
         </div>
         <!-- Timeout -->
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
           <h3>Timeout</h3>
-          <a href="http://renisalcedo.github.io/TIME-OUT/index.html"><img class="group img-responsive"src="assets/img/pages/timeout-min.png" alt="Timeout" /></a>
+          <a href="http://renisalcedo.github.io/TIME-OUT/index.html"><img class="group img-responsive" src="assets/img/pages/timeout-min.png" alt="Timeout" /></a>
         </div>
         <!-- Trash-Free Brooklyn -->
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
           <h3>Trash-Free Brooklyn</h3>
-          <a href="https://github.com/renisalcedo/trash-free"><img class="img-responsive"src="assets/img/pages/tfbrooklyn-min.png" alt="Trash-Free Brooklyn" /></a>
+          <a href="https://github.com/renisalcedo/trash-free"><img class="img-responsive" src="assets/img/pages/tfbrooklyn-min.png" alt="Trash-Free Brooklyn" /></a>
         </div>
         <!-- Introduction To Python -->
         <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 box">
           <h3>Introduction To Python</h3>
-          <a href="https://renisalcedo.github.io/python_tut/"><img class="img-responsive"src="assets/img/pages/python-tut-min.png" alt="Python tutorial" /></a>
+          <a href="https://renisalcedo.github.io/python_tut/"><img class="img-responsive" src="assets/img/pages/python-tut-min.png" alt="Python tutorial" /></a>
         </div>
       </div>
     </section>
